# forge-cute-py

./: CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
bench/: benchmark_online_softmax.py
docs/intro/: README.md  install.sh  part1.py  part2.py  pyproject.toml  reduce_2d.py  reduce_nd.py
forge_cute_py/: env_check.py
forge_cute_py/kernels/: __init__.py  copy_transpose.py  reduce_sum.py  softmax_online.py  testing.py
forge_cute_py/ops/: reduce_sum.py  softmax_online.py
forge_cute_py/util/: __init__.py  autotuner.py  bench.py  profile_launch.py
scripts/: profile.sh  set_arch.sh  verify_dgx_spark.sh
tests/: test_softmax_online.py
